All classes have changed to new ones

--- a/My_Theme_Collection/BubbleThemev3.theme.css
+++ b/My_Theme_Collection/BubbleThemev3.theme.css
@@ -41,8 +41,8 @@
     background-color: #181818;
 }
 
-.withTagAsButton-OsgQ9L:hover,
-.withTagless-10ooWt:hover {
+.withTagAsButton-2_JkHX:hover,
+.withTagless-Lx3LMo:hover {
     background-color: rgba(0, 0, 0, .3);
     border-radius: 50px;
     border: 1px solid #76AAD9;
@@ -314,7 +314,7 @@
 }
 
 .theme-dark .container-1NXEtd,
-.chat-2ZfjoI {
+.chat-9g_3Xj {
     background-color: transparent;
 }
 
@@ -593,9 +593,9 @@
 }
 
 .container-ZMc96U.themed-Hp1KC_,
-.members-3WRCEx,
-.members-3WRCEx>div,
-.container-2o3qEW {
+.members-2y1nVj,
+.members-2y1nVj>div,
+.container-2vWgD2 {
     background: transparent;
 }
 
@@ -730,12 +730,12 @@
     display: none;
 }
 
-.floating-3M3WeH {
+.floating-1T0kDs {
     border-left: none;
     filter: none;
 }
 
-.container-3XgAHv {
+.container-3s2w-i {
     border-radius: 50px;
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.33);
@@ -889,7 +889,7 @@
     background: transparent;
 }
 
-.channelTextArea-1FufC0 {
+.channelTextArea-1deLlK {
     background-color: transparent;
 }
 
@@ -1290,7 +1290,7 @@
 
 .theme-dark .option-ayUoaq:hover:after,
 .theme-dark .option-ayUoaq:after,
-.theme-dark .form-3gdLxP:before,
+.theme-dark .form-3qe0Ni:before,
 .theme-dark .option-ayUoaq[aria-selected=true]:after {
     background: none;
 }
@@ -3387,8 +3387,8 @@
     background: rgba(0, 0, 0, .2);
 }
 
-.member-48YF_l,
-.members-3WRCEx {
+.member-2iQhp7,
+.members-2y1nVj {
     background-color: transparent;
 }
 
@@ -3654,7 +3654,7 @@
 .mulitplePlaceholderUsername-2T3DCI,
 .placeholderAvatar-1qAcRZ,
 .placeholderUsername-3iQi_D,
-.memberGroupsPlaceholder-9tqX9V {
+.memberGroupsPlaceholder-HII-9j {
     background-color: teal;
     border-radius: 2px;
 }
@@ -3931,7 +3931,7 @@
     border-top: none;
 }
 
-.wrapper-2SplAX {
+.wrapper-IjGAlW {
     background-color: rgba(0, 0, 0, .5);
 }
 
@@ -3997,7 +3997,7 @@
     box-shadow: inset 0 0 0 2px teal;
 }
 
-.container-1zzFcN {
+.container-2NLBJg {
     border-bottom: none;
     background: none;
 }
@@ -4006,12 +4006,12 @@
     background: #141414;
 }
 
-.noiseCancellationPopout-2-e5Xz {
+.noiseCancellationPopout-mXdIP4 {
     background: #141414;
     box-shadow: none;
 }
 
-.noiseCancellationPopout-2-e5Xz a {
+.noiseCancellationPopout-mXdIP4 a {
     color: #63F3FD;
 }
 
@@ -4055,7 +4055,7 @@
     background-color: transparent;
 }
 
-.theme-dark .memberListItem-3V-x8Q:not(.popoutDisabled-PP2QdB):hover {
+.theme-dark .memberListItem-Jw4HTg:not(.popoutDisabled-VsUjyv):hover {
     background-color: rgba(255, 255, 255, .13);
 }
 
@@ -4627,7 +4627,7 @@
     background: rgba(255, 255, 255, .12);
 }
 
-.chatContent-3KubbW {
+.chatContent-2O4SXb {
     background: none;
 }
 
@@ -4635,7 +4635,7 @@
     color: #c0c0c0;
 }
 
-.theme-dark .container-YkUktl {
+.theme-dark .container-1CH86i {
     background-color: transparent;
 }
 
@@ -4707,7 +4707,7 @@
     color: gold;
 }
 
-.resizeHandle-PBRzPC {
+.resizeHandle-2F4Beb {
     background: none;
 }
 
@@ -4773,7 +4773,7 @@
     width: 600px;
 }
 
-.theme-dark .panel-2ZFCRb {
+.theme-dark .panel-ufc1-o {
     background: none;
 }
 
