--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -32,8 +32,8 @@
     color: white;
 }
 
-.withTagAsButton-OsgQ9L:hover, 
-.withTagless-10ooWt:hover {
+.withTagAsButton-2_JkHX:hover, 
+.withTagless-Lx3LMo:hover {
   background-color: rgba(0, 0, 0, .3);
   border-radius: 4px;
   border: 1px solid #912;
@@ -59,11 +59,11 @@
 }
 
 /* Transparency */
-.container-ZMc96U.themed-Hp1KC_, .chat-2ZfjoI, .container-2o3qEW, .sidebar-1tnWFu, .contentRegion-3HkfJJ, .sidebarRegionScroller-FXiQOh,
+.container-ZMc96U.themed-Hp1KC_, .chat-9g_3Xj, .container-2vWgD2, .sidebar-1tnWFu, .contentRegion-3HkfJJ, .sidebarRegionScroller-FXiQOh,
 .nowPlayingColumn-1eCBCN {
     background: transparent;
 }
-.bg-1QIAus, .wrapper-1_HaEi, .members-3WRCEx, .members-3WRCEx>div, .theme-dark .container-1NXEtd, .theme-dark .scroller-3X7KbA, 
+.bg-1QIAus, .wrapper-1_HaEi, .members-2y1nVj, .members-2y1nVj>div, .theme-dark .container-1NXEtd, .theme-dark .scroller-3X7KbA, 
 .contentRegionScroller-2_GT_N, .standardSidebarView-E9Pc3j, .layer-86YKbF, .privateChannels-oVe7HL, .theme-dark .scroller-WSmht3, .theme-dark .container-2cd8Mz,
 .container-1oAagU {
     background-color: transparent;
@@ -1655,7 +1655,7 @@
     color: white !important;
 }
 
-.membersGroup-2eiWxl {
+.membersGroup-2YoqY- {
     color: white;
     letter-spacing: 0;
     text-transform: capitalize;
@@ -1723,7 +1723,7 @@
     border-radius: 5px;
 }
 
-.channelTextArea-1FufC0 {
+.channelTextArea-1deLlK {
     background-color: rgba(153, 17, 33, .43);
 }
 
@@ -2004,7 +2004,7 @@
     opacity: .75;
 }
 
-.theme-dark .form-3gdLxP:before {
+.theme-dark .form-3qe0Ni:before {
     background: none;
 }
 
@@ -2031,16 +2031,16 @@
     background-color: transparent;
 }
 
-.theme-dark .container-YkUktl  {
+.theme-dark .container-1CH86i  {
     background-color: transparent;
 }
 
-.container-YkUktl .avatar-1EWyVD foreignObject,
+.container-1CH86i .avatar-19siqs foreignObject,
 .inviteRowAvatar-3ETE3i foreignObject {
     mask: none;
 }
 
-.container-YkUktl .avatar-1EWyVD .avatar-31d8He,
+.container-1CH86i .avatar-19siqs .avatar-31d8He,
 .inviteRowAvatar-3ETE3i .avatar-31d8He {
     border-radius: 4px;
 }
@@ -2117,7 +2117,7 @@
     background-color: #C13;
 }
 
-.container-3XgAHv {
+.container-3s2w-i {
     background-image: -webkit-linear-gradient(56deg, #000000 20%, #991121 75%);
     background-color: transparent;
 }
@@ -2344,7 +2344,7 @@
     background-color: #188b01 !important;
 }
 
-.chatContent-3KubbW {
+.chatContent-2O4SXb {
     background: none;
 }
 
@@ -2919,8 +2919,8 @@
         background: rgba(0,0,0,.2);
 }
 
-.member-48YF_l, 
-.members-3WRCEx {
+.member-2iQhp7, 
+.members-2y1nVj {
     background-color: transparent;
 }
 
@@ -3126,7 +3126,7 @@ border-top-color: #912;
 .mulitplePlaceholderUsername-2T3DCI,
 .placeholderAvatar-1qAcRZ,
 .placeholderUsername-3iQi_D,
-.memberGroupsPlaceholder-9tqX9V {
+.memberGroupsPlaceholder-HII-9j {
   background-color: #912;
   border-radius: 2px;
 }
@@ -3423,7 +3423,7 @@ border-top-color: #912;
     border-top: none;
 }
 
-.wrapper-2SplAX {
+.wrapper-IjGAlW {
     background-color: rgba(0,0,0,.5);
 }
 
@@ -3489,7 +3489,7 @@ border-top-color: #912;
     box-shadow: inset 0 0 0 2px #912;
 }
 
-.container-1zzFcN {
+.container-2NLBJg {
     border-bottom: none;
     background: none;
 }
@@ -3507,12 +3507,12 @@ border-top-color: #912;
 }
 
 
-.noiseCancellationPopout-2-e5Xz {
+.noiseCancellationPopout-mXdIP4 {
     background: #141414;
     box-shadow: none;
 }
 
-.noiseCancellationPopout-2-e5Xz a {
+.noiseCancellationPopout-mXdIP4 a {
     color: #63F3FD;
 }
 
@@ -3556,7 +3556,7 @@ border-top-color: #912;
     background-color: transparent;
 }
 
-.theme-dark .memberListItem-3V-x8Q:not(.popoutDisabled-PP2QdB):hover {
+.theme-dark .memberListItem-Jw4HTg:not(.popoutDisabled-VsUjyv):hover {
     background-color: rgba(255,255,255,.13);
 }
 
@@ -4203,7 +4203,7 @@ border-top-color: #912;
     color: gold;
 }
 
-.resizeHandle-PBRzPC {
+.resizeHandle-2F4Beb {
     background: none;
 }
 
