--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -27,8 +27,8 @@
     background-color: rgba(0,0,0,.65);
 }
 
-.withTagAsButton-OsgQ9L:hover, 
-.withTagless-10ooWt:hover {
+.withTagAsButton-2_JkHX:hover, 
+.withTagless-Lx3LMo:hover {
   background-color: rgba(0, 0, 0, .3);
   border-radius: 4px;
   border: 1px solid #f44;
@@ -47,11 +47,11 @@
 }
 
 /* Transparency */
-.container-ZMc96U.themed-Hp1KC_, .chat-2ZfjoI, .container-2o3qEW, .sidebar-1tnWFu, .contentRegion-3HkfJJ, .sidebarRegionScroller-FXiQOh,
+.container-ZMc96U.themed-Hp1KC_, .chat-9g_3Xj, .container-2vWgD2, .sidebar-1tnWFu, .contentRegion-3HkfJJ, .sidebarRegionScroller-FXiQOh,
 .nowPlayingColumn-1eCBCN {
     background: transparent;
 }
-.bg-1QIAus, .wrapper-1_HaEi, .members-3WRCEx, .members-3WRCEx>div, .theme-dark .container-1NXEtd, .theme-dark .scroller-3X7KbA, 
+.bg-1QIAus, .wrapper-1_HaEi, .members-2y1nVj, .members-2y1nVj>div, .theme-dark .container-1NXEtd, .theme-dark .scroller-3X7KbA, 
 .contentRegionScroller-2_GT_N, .standardSidebarView-E9Pc3j, .layer-86YKbF, .privateChannels-oVe7HL, .theme-dark .scroller-WSmht3, .theme-dark .container-2cd8Mz,
 .container-1oAagU {
     background-color: transparent;
@@ -1489,13 +1489,13 @@ background-color: transparent  !important;
     border-radius: 5px;
 }
 
-.channelTextArea-1FufC0 {
+.channelTextArea-1deLlK {
     background-color: transparent;
 }
 
 .avatar-1HDIsL foreignObject,
 .avatar-6qzftW foreignObject,
-.container-YkUktl .avatar-1EWyVD foreignObject,
+.container-1CH86i .avatar-19siqs foreignObject,
 .avatar-2Vndt_ foreignObject,
 .avatar-3QF_VA foreignObject,
 .avatarHint-k7pYop foreignObject,
@@ -1505,7 +1505,7 @@ background-color: transparent  !important;
 
 .avatar-1HDIsL .avatar-31d8He,
 .avatar-6qzftW .avatar-31d8He,
-.container-YkUktl .avatar-1EWyVD .avatar-31d8He,
+.container-1CH86i .avatar-19siqs .avatar-31d8He,
 .avatar-2Vndt_ .avatar-31d8He,
 .avatar-3QF_VA .avatar-31d8He,
 .listAvatar-2bU5Uh .avatar-31d8He {
@@ -1826,7 +1826,7 @@ background-color: transparent  !important;
     background-color: rgba(204, 102, 119, .7);
 }
 
-.membersGroup-2eiWxl, .container-1oeRFJ, .button-12Fmur {
+.membersGroup-2YoqY-, .container-1oeRFJ, .button-12Fmur {
     color: white;
 }
 
@@ -1854,7 +1854,7 @@ background-color: transparent  !important;
     fill: #f44;
 }
 
-.theme-dark .form-3gdLxP:before {
+.theme-dark .form-3qe0Ni:before {
     background: none;
 }
 
@@ -2424,7 +2424,7 @@ background-color: transparent  !important;
     border-radius: 4px;
 }
 
-.container-3XgAHv, .container-18GwIk {
+.container-3s2w-i, .container-18GwIk {
     background-attachment: fixed;
     background-image: -webkit-radial-gradient(50% 53%, ellipse cover, #292929 15%, #000000 71%);
 }
@@ -3117,8 +3117,8 @@ background-color: transparent  !important;
         background: rgba(0,0,0,.2);
 }
 
-.member-48YF_l, 
-.members-3WRCEx {
+.member-2iQhp7, 
+.members-2y1nVj {
     background-color: transparent;
 }
 
@@ -3323,7 +3323,7 @@ border-top-color: #f44;
 .mulitplePlaceholderUsername-2T3DCI,
 .placeholderAvatar-1qAcRZ,
 .placeholderUsername-3iQi_D,
-.memberGroupsPlaceholder-9tqX9V {
+.memberGroupsPlaceholder-HII-9j {
   background-color: #f44;
   border-radius: 2px;
 }
@@ -3619,7 +3619,7 @@ border-top-color: #f44;
     border-top: none;
 }
 
-.wrapper-2SplAX {
+.wrapper-IjGAlW {
     background-color: rgba(0,0,0,.5);
 }
 
@@ -3685,7 +3685,7 @@ border-top-color: #f44;
     box-shadow: inset 0 0 0 2px #F44;
 }
 
-.container-1zzFcN {
+.container-2NLBJg {
     border-bottom: none;
     background: none;
 }
@@ -3695,12 +3695,12 @@ border-top-color: #f44;
 }
 
 
-.noiseCancellationPopout-2-e5Xz {
+.noiseCancellationPopout-mXdIP4 {
     background: #141414;
     box-shadow: none;
 }
 
-.noiseCancellationPopout-2-e5Xz a {
+.noiseCancellationPopout-mXdIP4 a {
     color: #63F3FD;
 }
 
@@ -3744,7 +3744,7 @@ border-top-color: #f44;
     background-color: transparent;
 }
 
-.theme-dark .memberListItem-3V-x8Q:not(.popoutDisabled-PP2QdB):hover {
+.theme-dark .memberListItem-Jw4HTg:not(.popoutDisabled-VsUjyv):hover {
     background-color: rgba(255,255,255,.13);
 }
 
@@ -4318,7 +4318,7 @@ border-top-color: #f44;
     background: rgba(255,255,255,.12);
 }
 
-.chatContent-3KubbW {
+.chatContent-2O4SXb {
     background: none;
 }
 
@@ -4326,7 +4326,7 @@ border-top-color: #f44;
     color: #c0c0c0;
 }
 
-.theme-dark .container-YkUktl  {
+.theme-dark .container-1CH86i  {
     background-color: transparent;
 }
 
@@ -4395,7 +4395,7 @@ border-top-color: #f44;
     color: gold;
 }
 
-.resizeHandle-PBRzPC {
+.resizeHandle-2F4Beb {
     background: none;
 }
 
