--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -23,8 +23,8 @@
   background-color: transparent;
 }
 
-.withTagAsButton-OsgQ9L:hover, 
-.withTagless-10ooWt:hover {
+.withTagAsButton-2_JkHX:hover, 
+.withTagless-Lx3LMo:hover {
   background-color: rgba(0, 0, 0, .3);
   border-radius: 4px;
   border: 1px solid #9b2742;
@@ -85,7 +85,7 @@
   border: 1px solid #4f545c;
 }
 
-.wrapper-2SplAX {
+.wrapper-IjGAlW {
   background-color: rgba(0, 0, 0, .23);
 }
 
@@ -1051,7 +1051,7 @@
   fill: #9b2742;
 }
 
-.theme-dark .container-1NXEtd, .sidebar-1tnWFu, .panels-3wFtMD, .chat-2ZfjoI, .messages-3amgkR {
+.theme-dark .container-1NXEtd, .sidebar-1tnWFu, .panels-3wFtMD, .chat-9g_3Xj, .messages-3amgkR {
   background-color: transparent;
 }
 
@@ -1060,11 +1060,11 @@
   background-color: transparent;
 }
 
-.content-1jQy2l:before {
+.content-18rAwf:before {
   box-shadow: none;
 }
 
-.container-1zzFcN {
+.container-2NLBJg {
   color: white;
   border-bottom: none;
   background: none;
@@ -1352,7 +1352,7 @@
   border-right-color: #ad3950;
 }
 
-.container-YkUktl .avatar-1EWyVD foreignObject {
+.container-1CH86i .avatar-19siqs foreignObject {
   mask: none;
 }
 
@@ -1369,7 +1369,7 @@
   color: white;
 }
 
-.children-3xh0VB:after, .theme-dark .form-3gdLxP:before, .option-ayUoaq:hover:after, .option-ayUoaq[aria-selected=true]:after,
+.children-3xh0VB:after, .theme-dark .form-3qe0Ni:before, .option-ayUoaq:hover:after, .option-ayUoaq[aria-selected=true]:after,
 .theme-dark .option-ayUoaq:after, .divider-q3P9HC {
   background: none;
 }
@@ -1647,15 +1647,15 @@
   background-color: rgba(0, 0, 0, .26);
 }
 
-.members-3WRCEx {
+.members-2y1nVj {
   background-color: rgba(0,0,0,.3);
 }
 
-.members-3WRCEx>div {
+.members-2y1nVj>div {
   background-color: transparent;
 }
 
-.titleAvatar-2e6spe foreignObject, .viewer-2fFR_X foreignObject, .memberListItem-3V-x8Q foreignObject {
+.titleAvatar-2e6spe foreignObject, .viewer-2fFR_X foreignObject, .memberListItem-Jw4HTg foreignObject {
   mask: none;
 }
 
@@ -1734,7 +1734,7 @@
   border-radius: 6px;
 }
 
-.membersGroup-2eiWxl {
+.membersGroup-2YoqY- {
   color: white;
   padding: 8px 0;
   height: 30px;
@@ -1871,7 +1871,7 @@
   background-color: transparent;
 }
 
-.channelTextArea-1FufC0 {
+.channelTextArea-1deLlK {
   background-color: rgba(0, 0, 0, .3);
 }
 
@@ -2772,7 +2772,7 @@
 }
 
 .avatar-1HDIsL foreignObject,
-.container-YkUktl .avatar-1EWyVD foreignObject {
+.container-1CH86i .avatar-19siqs foreignObject {
   mask: none;
 }
 
@@ -2781,7 +2781,7 @@
   border-radius: 5px;
 }
 
-.container-3XgAHv {
+.container-3s2w-i {
   background: #380d0d;
 }
 
@@ -2935,7 +2935,7 @@
   color: lightgreen;
 }
 
-.container-2o3qEW {
+.container-2vWgD2 {
   background: transparent;
 }
 
@@ -3512,8 +3512,8 @@
       background: rgba(0,0,0,.2);
 }
 
-.member-48YF_l, 
-.members-3WRCEx {
+.member-2iQhp7, 
+.members-2y1nVj {
     background-color: transparent;
 }
 
@@ -3718,7 +3718,7 @@ border-top-color: #9b2742;
 .mulitplePlaceholderUsername-2T3DCI,
 .placeholderAvatar-1qAcRZ,
 .placeholderUsername-3iQi_D,
-.memberGroupsPlaceholder-9tqX9V {
+.memberGroupsPlaceholder-HII-9j {
   background-color: #9b2742;
   border-radius: 2px;
 }
@@ -4044,12 +4044,12 @@ border-top-color: #9b2742;
 }
 
 
-.noiseCancellationPopout-2-e5Xz {
+.noiseCancellationPopout-mXdIP4 {
   background: #141414;
   box-shadow: none;
 }
 
-.noiseCancellationPopout-2-e5Xz a {
+.noiseCancellationPopout-mXdIP4 a {
   color: #63F3FD;
 }
 
@@ -4093,7 +4093,7 @@ border-top-color: #9b2742;
   background-color: transparent;
 }
 
-.theme-dark .memberListItem-3V-x8Q:not(.popoutDisabled-PP2QdB):hover {
+.theme-dark .memberListItem-Jw4HTg:not(.popoutDisabled-VsUjyv):hover {
   background-color: rgba(255,255,255,.13);
 }
 
@@ -4672,7 +4672,7 @@ border-top-color: #9b2742;
   background: rgba(255,255,255,.12);
 }
 
-.chatContent-3KubbW {
+.chatContent-2O4SXb {
   background: none;
 }
 
@@ -4680,7 +4680,7 @@ border-top-color: #9b2742;
   color: #c0c0c0;
 }
 
-.theme-dark .container-YkUktl  {
+.theme-dark .container-1CH86i  {
   background-color: transparent;
 }
 
@@ -4753,7 +4753,7 @@ fill: white;
   background-color: rgba(0, 0, 0, .4);
 }
 
-.resizeHandle-PBRzPC {
+.resizeHandle-2F4Beb {
   background: none;
 }
 
