--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -80,23 +80,23 @@ textarea,
     background-size: cover;
 }
 
-.container-2o3qEW,
+.container-2vWgD2,
 .theme-dark .layer-86YKbF,
 .theme-dark .wrapper-1_HaEi,
 .theme-dark .scroller-3X7KbA,
 .theme-dark .container-1NXEtd,
-.theme-dark .chat-2ZfjoI,
-.theme-dark .content-1jQy2l,
+.theme-dark .chat-9g_3Xj,
+.theme-dark .content-18rAwf,
 .scroller-3_YDR2,
 .sidebar-1tnWFu {
     background-color: transparent;
 }
 
-.theme-dark .members-3WRCEx {
+.theme-dark .members-2y1nVj {
     background-color: rgba(0, 0, 0, 0.25);
 }
 
-.members-3WRCEx>div {
+.members-2y1nVj>div {
     background-color: transparent;
 }
 
@@ -983,8 +983,8 @@ textarea,
     border: 3px solid transparent;
 }
 
-.withTagAsButton-OsgQ9L:hover,
-.withTagless-10ooWt:hover {
+.withTagAsButton-2_JkHX:hover,
+.withTagless-Lx3LMo:hover {
     background-color: rgba(0, 0, 0, .3);
     border-radius: 4px;
     border: 1px solid #008c99;
@@ -1225,7 +1225,7 @@ textarea,
 }
 
 .activity-2EQDZv,
-.membersGroup-2eiWxl,
+.membersGroup-2YoqY-,
 .container-1oeRFJ,
 .cozy-VmLDNB .timestamp-p1Df1m {
     color: white;
@@ -1245,7 +1245,7 @@ textarea,
     overflow: visible;
 }
 
-.channelTextArea-1FufC0 {
+.channelTextArea-1deLlK {
     background: none;
 }
 
@@ -2185,7 +2185,7 @@ textarea,
     fill: #008c99;
 }
 
-.theme-dark .form-3gdLxP:before,
+.theme-dark .form-3qe0Ni:before,
 .separator-PzTEkx {
     background: none;
 }
@@ -3021,8 +3021,8 @@ textarea,
     background: rgba(0, 0, 0, .2);
 }
 
-.member-48YF_l,
-.members-3WRCEx {
+.member-2iQhp7,
+.members-2y1nVj {
     background-color: transparent;
 }
 
@@ -3218,7 +3218,7 @@ textarea,
 .mulitplePlaceholderUsername-2T3DCI,
 .placeholderAvatar-1qAcRZ,
 .placeholderUsername-3iQi_D,
-.memberGroupsPlaceholder-9tqX9V {
+.memberGroupsPlaceholder-HII-9j {
   background-color: #008c99;
   border-radius: 2px;
 }
@@ -3506,7 +3506,7 @@ textarea,
     border-top: none;
 }
 
-.wrapper-2SplAX {
+.wrapper-IjGAlW {
     background-color: rgba(0,0,0,.5);
 }
 
@@ -3563,7 +3563,7 @@ textarea,
     box-shadow: inset 0 0 0 2px #008c99;
 }
 
-.container-1zzFcN {
+.container-2NLBJg {
     border-bottom: none;
     background: none;
 }
@@ -3573,12 +3573,12 @@ textarea,
 }
 
 
-.noiseCancellationPopout-2-e5Xz {
+.noiseCancellationPopout-mXdIP4 {
     background: #141414;
     box-shadow: none;
 }
 
-.noiseCancellationPopout-2-e5Xz a {
+.noiseCancellationPopout-mXdIP4 a {
     color: #63F3FD;
 }
 
@@ -3622,7 +3622,7 @@ textarea,
     background-color: transparent;
 }
 
-.theme-dark .memberListItem-3V-x8Q:not(.popoutDisabled-PP2QdB):hover {
+.theme-dark .memberListItem-Jw4HTg:not(.popoutDisabled-VsUjyv):hover {
     background-color: rgba(255,255,255,.13);
 }
 
@@ -4068,7 +4068,7 @@ textarea,
     background: none;
 }
 
-.container-3XgAHv {
+.container-3s2w-i {
     background: #21252B;
 }
 
@@ -4213,7 +4213,7 @@ textarea,
     background: rgba(255,255,255,.12);
 }
 
-.chatContent-3KubbW {
+.chatContent-2O4SXb {
     background: none;
 }
 
@@ -4221,7 +4221,7 @@ textarea,
     color: #c0c0c0;
 }
 
-.theme-dark .container-YkUktl  {
+.theme-dark .container-1CH86i  {
     background-color: transparent;
 }
 
@@ -4293,7 +4293,7 @@ textarea,
     background-color: rgba(0, 0, 0, .4);
 }
 
-.resizeHandle-PBRzPC {
+.resizeHandle-2F4Beb {
     background: none;
 }
 
