--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -1555,8 +1555,8 @@
     background-color: rgba(0, 0, 0, .15);
 }
 
-.withTagAsButton-OsgQ9L:hover, 
-.withTagless-10ooWt:hover {
+.withTagAsButton-2_JkHX:hover, 
+.withTagless-Lx3LMo:hover {
     background-color: rgba(0, 0, 0, .45);
     color: white;
 }
@@ -1696,11 +1696,11 @@
     border-radius: 4px;
 }
 
-.chat-2ZfjoI {
+.chat-9g_3Xj {
     background: none;
 }
 
-.content-1jQy2l:before {
+.content-18rAwf:before {
     box-shadow: none;
 }
 
@@ -2031,11 +2031,11 @@
     background-color: #f3acc5 !important;
 }
 
-.theme-dark .form-3gdLxP:before {
+.theme-dark .form-3qe0Ni:before {
     background: none;
 }
 
-.channelTextArea-1FufC0 {
+.channelTextArea-1deLlK {
     background-color: rgba(243, 172, 197, .4);
 }
 
@@ -2297,16 +2297,16 @@
     border-color: #f3acc5;
 }
 
-.membersGroup-2eiWxl.container-q97qHp {
+.membersGroup-2YoqY-.container-q97qHp {
     color: white;
 }
 
-.member-48YF_l, 
-.members-3WRCEx {
+.member-2iQhp7, 
+.members-2y1nVj {
     background-color: transparent;
 }
 
-.container-2o3qEW {
+.container-2vWgD2 {
     background: none;
 }
 
@@ -2654,7 +2654,7 @@
     background-color: transparent;
 }
 
-.container-3XgAHv {
+.container-3s2w-i {
     background: #1c1c1c;
 }
 
@@ -2694,7 +2694,7 @@
     border-top-color: #f3acc5;
 }
 
-.container-1zzFcN {
+.container-2NLBJg {
     border-bottom: none;
     background: none;
 }
@@ -3092,7 +3092,7 @@
 .mulitplePlaceholderUsername-2T3DCI,
 .placeholderAvatar-1qAcRZ,
 .placeholderUsername-3iQi_D,
-.memberGroupsPlaceholder-9tqX9V {
+.memberGroupsPlaceholder-HII-9j {
   background-color: #f3acc5;
   border-radius: 2px;
 }
@@ -3398,7 +3398,7 @@
     border-top: none;
 }
 
-.wrapper-2SplAX {
+.wrapper-IjGAlW {
     background-color: rgba(0,0,0,.5);
 }
 
@@ -3464,12 +3464,12 @@
 }
 
 
-.noiseCancellationPopout-2-e5Xz {
+.noiseCancellationPopout-mXdIP4 {
     background: #141414;
     box-shadow: none;
 }
 
-.noiseCancellationPopout-2-e5Xz a {
+.noiseCancellationPopout-mXdIP4 a {
     color: #63F3FD;
 }
 
@@ -3513,7 +3513,7 @@
     background-color: transparent;
 }
 
-.theme-dark .memberListItem-3V-x8Q:not(.popoutDisabled-PP2QdB):hover {
+.theme-dark .memberListItem-Jw4HTg:not(.popoutDisabled-VsUjyv):hover {
     background-color: rgba(255,255,255,.13);
 }
 
@@ -4082,7 +4082,7 @@
     background: rgba(255,255,255,.12);
 }
 
-.chatContent-3KubbW {
+.chatContent-2O4SXb {
     background: none;
 }
 
@@ -4090,7 +4090,7 @@
     color: #c0c0c0;
 }
 
-.theme-dark .container-YkUktl  {
+.theme-dark .container-1CH86i  {
     background-color: transparent;
 }
 
@@ -4162,7 +4162,7 @@
     color: gold;
 }
 
-.resizeHandle-PBRzPC {
+.resizeHandle-2F4Beb {
     background: none;
 }
 
