--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -1524,8 +1524,8 @@
     background-color: rgba(0, 0, 0, .15);
 }
 
-.withTagAsButton-OsgQ9L:hover, 
-.withTagless-10ooWt:hover {
+.withTagAsButton-2_JkHX:hover, 
+.withTagless-Lx3LMo:hover {
     background-color: rgba(0, 0, 0, .45);
     color: white;
 }
@@ -1665,11 +1665,11 @@
     border-radius: 4px;
 }
 
-.chat-2ZfjoI {
+.chat-9g_3Xj {
     background: none;
 }
 
-.content-1jQy2l:before {
+.content-18rAwf:before {
     box-shadow: none;
 }
 
@@ -2000,11 +2000,11 @@
     background-color: #6cb4fe !important;
 }
 
-.theme-dark .form-3gdLxP:before {
+.theme-dark .form-3qe0Ni:before {
     background: none;
 }
 
-.channelTextArea-1FufC0 {
+.channelTextArea-1deLlK {
     background-color: rgba(108, 180, 254, .4);
 }
 
@@ -2266,16 +2266,16 @@
     border-color: #6cb4fe;
 }
 
-.membersGroup-2eiWxl.container-q97qHp {
+.membersGroup-2YoqY-.container-q97qHp {
     color: white;
 }
 
-.member-48YF_l, 
-.members-3WRCEx {
+.member-2iQhp7, 
+.members-2y1nVj {
     background-color: transparent;
 }
 
-.container-2o3qEW {
+.container-2vWgD2 {
     background: none;
 }
 
@@ -2623,7 +2623,7 @@
     background-color: transparent;
 }
 
-.container-3XgAHv {
+.container-3s2w-i {
     background: #1c1c1c;
 }
 
@@ -2663,7 +2663,7 @@
     border-top-color: #6cb4fe;
 }
 
-.container-1zzFcN {
+.container-2NLBJg {
     border-bottom: none;
     background: none;
 }
@@ -3062,7 +3062,7 @@
 .mulitplePlaceholderUsername-2T3DCI,
 .placeholderAvatar-1qAcRZ,
 .placeholderUsername-3iQi_D,
-.memberGroupsPlaceholder-9tqX9V {
+.memberGroupsPlaceholder-HII-9j {
   background-color: #6cb4fe;
   border-radius: 2px;
 }
@@ -3368,7 +3368,7 @@
     border-top: none;
 }
 
-.wrapper-2SplAX {
+.wrapper-IjGAlW {
     background-color: rgba(0,0,0,.5);
 }
 
@@ -3434,12 +3434,12 @@
 }
 
 
-.noiseCancellationPopout-2-e5Xz {
+.noiseCancellationPopout-mXdIP4 {
     background: #141414;
     box-shadow: none;
 }
 
-.noiseCancellationPopout-2-e5Xz a {
+.noiseCancellationPopout-mXdIP4 a {
     color: #63F3FD;
 }
 
@@ -3483,7 +3483,7 @@
     background-color: transparent;
 }
 
-.theme-dark .memberListItem-3V-x8Q:not(.popoutDisabled-PP2QdB):hover {
+.theme-dark .memberListItem-Jw4HTg:not(.popoutDisabled-VsUjyv):hover {
     background-color: rgba(255,255,255,.13);
 }
 
@@ -4052,7 +4052,7 @@
     background: rgba(255,255,255,.12);
 }
 
-.chatContent-3KubbW {
+.chatContent-2O4SXb {
     background: none;
 }
 
@@ -4060,7 +4060,7 @@
     color: #c0c0c0;
 }
 
-.theme-dark .container-YkUktl  {
+.theme-dark .container-1CH86i  {
     background-color: transparent;
 }
 
@@ -4132,7 +4132,7 @@
     color: gold;
 }
 
-.resizeHandle-PBRzPC {
+.resizeHandle-2F4Beb {
     background: none;
 }
 
