--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -11,16 +11,16 @@
     background: #282828;
 }
 
-.container-2o3qEW,
+.container-2vWgD2,
 #app-mount .container-ZMc96U,
 .sidebar-1tnWFu,
-.chat-2ZfjoI {
+.chat-9g_3Xj {
     background: none;
 }
 
 .wrapper-1_HaEi,
-.member-48YF_l, 
-.members-3WRCEx,
+.member-2iQhp7, 
+.members-2y1nVj,
 .theme-dark .container-1NXEtd,
 .panels-3wFtMD {
     background-color: transparent;
@@ -31,7 +31,7 @@
     background-color: #282828;
 }
 
-.content-1jQy2l:before {
+.content-18rAwf:before {
     box-shadow: none;
 }
 
@@ -611,7 +611,7 @@
 }
 
 
-.membersGroup-2eiWxl.container-q97qHp {
+.membersGroup-2YoqY-.container-q97qHp {
     color: #F1F1F1;
     font-size: 16px;
 }
@@ -998,7 +998,7 @@
     background-color: #282828;
 }
 
-.theme-dark .form-3gdLxP:before {
+.theme-dark .form-3qe0Ni:before {
     background: none;
 }
 
@@ -1041,7 +1041,7 @@
     height: 37px;
 }
 
-.channelTextArea-1FufC0 {
+.channelTextArea-1deLlK {
     border-radius: 50px;
     background-color: #282828;
     border: 1px solid rgba(255, 255, 255, .1);
@@ -2159,7 +2159,7 @@
     background-color: transparent;
 }
 
-.wrapper-2SplAX,
+.wrapper-IjGAlW,
 .wrapper-1HIH0j {
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, .1);
@@ -2575,7 +2575,7 @@
     box-shadow: none;
 }
 
-.container-3XgAHv {
+.container-3s2w-i {
     background: #282828;
     border: 2px solid rgba(255, 255, 255, .1);
     border-radius: 9px;
@@ -2795,18 +2795,18 @@
     background-color: rgba(255, 255, 255, .2);
 }
 
-.container-1zzFcN {
+.container-2NLBJg {
     border-bottom: none;
     background: none;
 }
 
-.noiseCancellationPopout-2-e5Xz {
+.noiseCancellationPopout-mXdIP4 {
     background: #282828;
     border: 2px solid rgba(255, 255, 255, .1);
     box-shadow: none;
 }
 
-.noiseCancellationPopout-2-e5Xz a {
+.noiseCancellationPopout-mXdIP4 a {
     color: #3ea6ff;
     font-weight: 600;
 }
@@ -3109,16 +3109,16 @@
 }
 
 .defaultImageView-2OSt9W,
-.withTagAsButton-OsgQ9L:hover, 
-.withTagless-10ooWt:hover {
+.withTagAsButton-2_JkHX:hover, 
+.withTagless-Lx3LMo:hover {
     color: #F1F1F1;
 }
 
 .placeholderLine-86Fsd9, 
 .placeholderMedia-34JHvE,
 .reaction-BL6n45,
-.withTagAsButton-OsgQ9L:hover, 
-.withTagless-10ooWt:hover {
+.withTagAsButton-2_JkHX:hover, 
+.withTagless-Lx3LMo:hover {
     background-color: rgba(255, 255, 255, .1);
 }
 
@@ -4150,7 +4150,7 @@
     color: white;
 }
 
-.chatContent-3KubbW {
+.chatContent-2O4SXb {
     background: none;
 }
 
@@ -4158,7 +4158,7 @@
     color: #c0c0c0;
 }
 
-.theme-dark .container-YkUktl  {
+.theme-dark .container-1CH86i  {
     background-color: transparent;
 }
 
@@ -4227,7 +4227,7 @@
     background-color: rgba(0, 0, 0, .3);
 }
 
-.resizeHandle-PBRzPC {
+.resizeHandle-2F4Beb {
     background: none;
 }
 
