--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -37,8 +37,8 @@
     background-color: transparent;
 }
 
-.withTagAsButton-OsgQ9L:hover, 
-.withTagless-10ooWt:hover {
+.withTagAsButton-2_JkHX:hover, 
+.withTagless-Lx3LMo:hover {
   background-color: rgba(0, 0, 0, .3);
   border-radius: 4px;
   border: 1px solid #22a9bb;
@@ -51,11 +51,11 @@
 }
 
 /* Transparency */
-.container-ZMc96U.themed-Hp1KC_, .chat-2ZfjoI, .container-2o3qEW, .sidebar-1tnWFu, .contentRegion-3HkfJJ, .sidebarRegionScroller-FXiQOh,
+.container-ZMc96U.themed-Hp1KC_, .chat-9g_3Xj, .container-2vWgD2, .sidebar-1tnWFu, .contentRegion-3HkfJJ, .sidebarRegionScroller-FXiQOh,
 .nowPlayingColumn-1eCBCN {
     background: transparent;
 }
-.bg-1QIAus, .wrapper-1_HaEi, .members-3WRCEx, .members-3WRCEx>div, .theme-dark .container-1NXEtd, .theme-dark .scroller-3X7KbA, 
+.bg-1QIAus, .wrapper-1_HaEi, .members-2y1nVj, .members-2y1nVj>div, .theme-dark .container-1NXEtd, .theme-dark .scroller-3X7KbA, 
 .contentRegionScroller-2_GT_N, .standardSidebarView-E9Pc3j, .layer-86YKbF, .privateChannels-oVe7HL, .theme-dark .scroller-WSmht3, .theme-dark .container-2cd8Mz,
 .container-1oAagU {
     background-color: transparent;
@@ -1082,7 +1082,7 @@
 }
 
 
-.theme-dark .form-3gdLxP:before {
+.theme-dark .form-3qe0Ni:before {
     background: none;
 }
 
@@ -1091,7 +1091,7 @@
     border-radius: 5px;
 }
 
-.channelTextArea-1FufC0 {
+.channelTextArea-1deLlK {
     background-color: transparent;
 }
 
@@ -1698,7 +1698,7 @@
 .avatarHint-k7pYop foreignObject,
 .avatar-3QF_VA foreignObject, 
 .listAvatar-2bU5Uh foreignObject, 
-.container-YkUktl .avatar-1EWyVD foreignObject,
+.container-1CH86i .avatar-19siqs foreignObject,
 .avatar-2MSPKk foreignObject,
 .headerAvatar-GgCKcl foreignObject, 
 .inviteRowAvatar-3ETE3i foreignObject {
@@ -1711,7 +1711,7 @@
 .avatar-2Vndt_ .avatar-31d8He,
 .avatar-3QF_VA .avatar-31d8He,
 .listAvatar-2bU5Uh .avatar-31d8He,
-.container-YkUktl .avatar-1EWyVD .avatar-31d8He, 
+.container-1CH86i .avatar-19siqs .avatar-31d8He, 
 .avatar-2MSPKk .avatar-31d8He,
 .headerAvatar-GgCKcl .avatar-31d8He,
 .inviteRowAvatar-3ETE3i .avatar-31d8He {
@@ -1886,7 +1886,7 @@
     border-radius: 4px;
 }
 
-.container-3XgAHv, .container-18GwIk {
+.container-3s2w-i, .container-18GwIk {
     background-attachment: fixed;
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
 }
@@ -2833,8 +2833,8 @@
         background: rgba(0,0,0,.2);
 }
 
-.member-48YF_l, 
-.members-3WRCEx {
+.member-2iQhp7, 
+.members-2y1nVj {
     background-color: transparent;
 }
 
@@ -3040,7 +3040,7 @@
 .mulitplePlaceholderUsername-2T3DCI,
 .placeholderAvatar-1qAcRZ,
 .placeholderUsername-3iQi_D,
-.memberGroupsPlaceholder-9tqX9V {
+.memberGroupsPlaceholder-HII-9j {
   background-color: #2AB;
   border-radius: 2px;
 }
@@ -3330,7 +3330,7 @@
     border-top: none;
 }
 
-.wrapper-2SplAX {
+.wrapper-IjGAlW {
     background-color: rgba(0,0,0,.5);
 }
 
@@ -3392,7 +3392,7 @@
     box-shadow: inset 0 0 0 2px #2AB;
 }
 
-.container-1zzFcN {
+.container-2NLBJg {
     border-bottom: none;
     background: none;
 }
@@ -3402,12 +3402,12 @@
 }
 
 
-.noiseCancellationPopout-2-e5Xz {
+.noiseCancellationPopout-mXdIP4 {
     background: #141414;
     box-shadow: none;
 }
 
-.noiseCancellationPopout-2-e5Xz a {
+.noiseCancellationPopout-mXdIP4 a {
     color: #63F3FD;
 }
 
@@ -3451,7 +3451,7 @@
     background-color: transparent;
 }
 
-.theme-dark .memberListItem-3V-x8Q:not(.popoutDisabled-PP2QdB):hover {
+.theme-dark .memberListItem-Jw4HTg:not(.popoutDisabled-VsUjyv):hover {
     background-color: rgba(255,255,255,.13);
 }
 
@@ -4030,7 +4030,7 @@
     background: rgba(255,255,255,.12);
 }
 
-.chatContent-3KubbW {
+.chatContent-2O4SXb {
     background: none;
 }
 
@@ -4038,7 +4038,7 @@
     color: #c0c0c0;
 }
 
-.theme-dark .container-YkUktl  {
+.theme-dark .container-1CH86i  {
     background-color: transparent;
 }
 
@@ -4107,7 +4107,7 @@
     color: gold;
 }
 
-.resizeHandle-PBRzPC {
+.resizeHandle-2F4Beb {
     background: none;
 }
 
