--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -29,8 +29,8 @@
     background-color: transparent;
 }
 
-.withTagAsButton-OsgQ9L:hover, 
-.withTagless-10ooWt:hover {
+.withTagAsButton-2_JkHX:hover, 
+.withTagless-Lx3LMo:hover {
   background-color: rgba(0, 0, 0, .3);
   border-radius: 4px;
   border: 1px solid #00aeff;
@@ -60,8 +60,8 @@
     background-color: rgba(0,0,0,.65);
 }
 
-.container-ZMc96U.themed-Hp1KC_, .chat-2ZfjoI, .members-3WRCEx, .members-3WRCEx>div,
-.chat-2ZfjoI, .container-2o3qEW, .theme-dark .container-1NXEtd, .sidebar-1tnWFu, .theme-dark .scroller-3X7KbA, .wrapper-1_HaEi {
+.container-ZMc96U.themed-Hp1KC_, .chat-9g_3Xj, .members-2y1nVj, .members-2y1nVj>div,
+.chat-9g_3Xj, .container-2vWgD2, .theme-dark .container-1NXEtd, .sidebar-1tnWFu, .theme-dark .scroller-3X7KbA, .wrapper-1_HaEi {
     background: transparent;
 }
 
@@ -698,7 +698,7 @@
     border-radius: 4px;
 }
 
-.container-3XgAHv {
+.container-3s2w-i {
     background: rgba(0,0,0,.25);
 }
 
@@ -737,7 +737,7 @@
     background-color: transparent;
 }
 
-.channelTextArea-3TZH74, .channelTextArea-1FufC0 {
+.channelTextArea-3TZH74, .channelTextArea-1deLlK {
     background-color: rgba(0,0,0,.15);
 }
 
@@ -1175,7 +1175,7 @@
     border: none;
 }
 
-.membersGroup-2eiWxl.container-q97qHp {
+.membersGroup-2YoqY-.container-q97qHp {
     color: white;
     font-size: 14px;
 }
@@ -1781,7 +1781,7 @@
     color: lightcoral;
 }
 
-.container-YkUktl .avatar-1EWyVD foreignObject {
+.container-1CH86i .avatar-19siqs foreignObject {
     mask: none;
 }
 
@@ -2765,8 +2765,8 @@
     background-color: transparent;
 }
 
-.member-48YF_l, 
-.members-3WRCEx {
+.member-2iQhp7, 
+.members-2y1nVj {
     background-color: transparent;
 }
 
@@ -3034,7 +3034,7 @@
 .mulitplePlaceholderUsername-2T3DCI,
 .placeholderAvatar-1qAcRZ,
 .placeholderUsername-3iQi_D,
-.memberGroupsPlaceholder-9tqX9V {
+.memberGroupsPlaceholder-HII-9j {
   background-color: #61a5d8;
   border-radius: 2px;
 }
@@ -3329,7 +3329,7 @@
     border-top: none;
 }
 
-.wrapper-2SplAX {
+.wrapper-IjGAlW {
     background-color: rgba(0,0,0,.5);
 }
 
@@ -3391,7 +3391,7 @@
     box-shadow: inset 0 0 0 2px #61a5d8;
 }
 
-.container-1zzFcN {
+.container-2NLBJg {
     border-bottom: none;
     background: none;
 }
@@ -3405,12 +3405,12 @@
 }
 
 
-.noiseCancellationPopout-2-e5Xz {
+.noiseCancellationPopout-mXdIP4 {
     background: #141414;
     box-shadow: none;
 }
 
-.noiseCancellationPopout-2-e5Xz a {
+.noiseCancellationPopout-mXdIP4 a {
     color: #63F3FD;
 }
 
@@ -3454,7 +3454,7 @@
     background-color: transparent;
 }
 
-.theme-dark .memberListItem-3V-x8Q:not(.popoutDisabled-PP2QdB):hover {
+.theme-dark .memberListItem-Jw4HTg:not(.popoutDisabled-VsUjyv):hover {
     background-color: rgba(255,255,255,.13);
 }
 
@@ -4013,7 +4013,7 @@
     background: rgba(255,255,255,.12);
 }
 
-.chatContent-3KubbW {
+.chatContent-2O4SXb {
     background: none;
 }
 
@@ -4021,7 +4021,7 @@
     color: #c0c0c0;
 }
 
-.theme-dark .container-YkUktl  {
+.theme-dark .container-1CH86i  {
     background-color: transparent;
 }
 
@@ -4090,7 +4090,7 @@
     color: gold;
 }
 
-.resizeHandle-PBRzPC {
+.resizeHandle-2F4Beb {
     background: none;
 }
 
