--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -1376,11 +1376,11 @@
     font-weight: 600;
 }
 
-.theme-dark .form-3gdLxP:before {
+.theme-dark .form-3qe0Ni:before {
     background: none;
 }
 
-.channelTextArea-1FufC0 {
+.channelTextArea-1deLlK {
     background-color: rgba(0, 0, 0, .2);
 }
 
@@ -1481,17 +1481,17 @@
     background-color: transparent;
 }
 
-.content-1jQy2l:before {
+.content-18rAwf:before {
     box-shadow: none;
 }
 
-.chat-2ZfjoI,
-.container-2o3qEW {
+.chat-9g_3Xj,
+.container-2vWgD2 {
     background: none;
 }
 
-.member-48YF_l, 
-.members-3WRCEx {
+.member-2iQhp7, 
+.members-2y1nVj {
     background-color: transparent;
 }
 
@@ -2011,7 +2011,7 @@
     background-color: rgba(0, 0, 0, .2);
 }
 
-.membersGroup-2eiWxl.container-q97qHp {
+.membersGroup-2YoqY-.container-q97qHp {
     padding: 10px 8px 0 16px;
     text-transform: capitalize;
     text-decoration: underline;
@@ -2025,7 +2025,7 @@
     
 }
 
-.container-2o3qEW:hover .membersGroup-2eiWxl.container-q97qHp {
+.container-2vWgD2:hover .membersGroup-2YoqY-.container-q97qHp {
     color: #D0DFFF;
     transform: translateX(26px);
 }
@@ -2523,8 +2523,8 @@
     background-color: #4B5569;
 }
 
-.withTagAsButton-OsgQ9L:hover, 
-.withTagless-10ooWt:hover {
+.withTagAsButton-2_JkHX:hover, 
+.withTagless-Lx3LMo:hover {
     background-color: rgba(0, 0, 0, .3);
     color: white;
 }
@@ -2541,7 +2541,7 @@
     border-top-color: #95A8B0;
 }
 
-.container-3XgAHv {
+.container-3s2w-i {
     background: linear-gradient(63deg, #4b5569 0%, #2d353f 89%);
 }
 
@@ -3293,7 +3293,7 @@
 .mulitplePlaceholderUsername-2T3DCI,
 .placeholderAvatar-1qAcRZ,
 .placeholderUsername-3iQi_D,
-.memberGroupsPlaceholder-9tqX9V {
+.memberGroupsPlaceholder-HII-9j {
   background-color: #95A8B0;
   border-radius: 2px;
 }
@@ -3588,7 +3588,7 @@
     border-top: none;
 }
 
-.wrapper-2SplAX {
+.wrapper-IjGAlW {
     background-color: rgba(0,0,0,.5);
 }
 
@@ -3640,7 +3640,7 @@
     box-shadow: inset 0 0 0 2px #95A8B0;
 }
 
-.container-1zzFcN {
+.container-2NLBJg {
     border-bottom: none;
     background: none;
 }
@@ -3654,12 +3654,12 @@
 }
 
 
-.noiseCancellationPopout-2-e5Xz {
+.noiseCancellationPopout-mXdIP4 {
     background: #141414;
     box-shadow: none;
 }
 
-.noiseCancellationPopout-2-e5Xz a {
+.noiseCancellationPopout-mXdIP4 a {
     color: #63F3FD;
 }
 
@@ -3703,7 +3703,7 @@
     background-color: transparent;
 }
 
-.theme-dark .memberListItem-3V-x8Q:not(.popoutDisabled-PP2QdB):hover {
+.theme-dark .memberListItem-Jw4HTg:not(.popoutDisabled-VsUjyv):hover {
     background-color: rgba(255,255,255,.13);
 }
 
@@ -4251,7 +4251,7 @@
     background: rgba(255,255,255,.12);
 }
 
-.chatContent-3KubbW {
+.chatContent-2O4SXb {
     background: none;
 }
 
@@ -4259,7 +4259,7 @@
     color: #c0c0c0;
 }
 
-.theme-dark .container-YkUktl  {
+.theme-dark .container-1CH86i  {
     background-color: transparent;
 }
 
@@ -4327,7 +4327,7 @@
     color: gold;
 }
 
-.resizeHandle-PBRzPC {
+.resizeHandle-2F4Beb {
     background: none;
 }
 
