Third time of the class changes
Technically the ones that I missed

--- a/My_Theme_Collection/BubbleThemev3.theme.css
+++ b/My_Theme_Collection/BubbleThemev3.theme.css
@@ -14,7 +14,7 @@
 .small-2xUY-3:not(.root-8LYsGj).root-1CAIjD {
     height: 450px;
     width: 500px;
-    padding: 70px 44px;
+    padding: 70px 44px ;
 }
 
 .small-2xUY-3:not(.root-8LYsGj).root-1CAIjD .header-1ffhsl {
@@ -199,12 +199,12 @@
     background-image: radial-gradient(circle closest-side at 20px 15px, white 10%, rgba(19, 9, 65, 0.79) 100%, rgba(19, 9, 65, 0.79) 100%);
 }
 
-.panels-3wFtMD .button-12Fmur {
+.panels-3wFtMD button.button-12Fmur {
     border-radius: 50px;
     color: white;
 }
 
-.panels-3wFtMD .button-12Fmur:hover {
+.panels-3wFtMD button.button-12Fmur.enabled-9OeuTA:hover {
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -21px 9px -16px rgba(231, 254, 255, 0.93);
 }
 
@@ -227,7 +227,7 @@
     border-radius: 50px;
 }
 
-.panels-3wFtMD .button-12Fmur:hover {
+.panels-3wFtMD button.button-12Fmur.enabled-9OeuTA:hover {
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -21px 9px -16px rgba(231, 254, 255, 0.93);
 }
 
