--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 5.1.6
+ * @version 5.1
  */
 
 /* Main Background */
@@ -1415,7 +1415,7 @@
     border-bottom: none;
 }
 
-.button-12Fmur {
+button.button-12Fmur {
     color: white;
 }
 
