--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 5.1.2
+ * @version 5.1
  */
 
 /* Main Background */
@@ -47,7 +47,7 @@
 
 /* Add shade to background */
 .layers-1YQhyW {
-    background-color: rgba(0,0,0,.6);
+    background-color: rgba(0,0,0,.7);
 }
 
 /* Transparency */
@@ -4178,6 +4178,41 @@
 .theme-dark .activityUserPopoutV2-3eKqzY .headerText-3g1XK9 {
     color: white;
 }
+
+
+.avatarDecoration-2Wb1Au {
+    border-radius: 4px;
+}
+
+.avatarDecoration-34OC0G {
+    width: 55px;
+    height: 55px;
+}
+
+.theme-dark .panel-ufc1-o {
+    background: none;
+}
+.activityPanel-9icbyU {
+    border-bottom: none;
+}
+
+.channelInfo-3jN1ay .text-xs-semibold-GgBYxI,
+.newMessageCount-MJLPvW {
+    color: lightgoldenrodyellow !important;
+}
+
+.avatarDecoration-34OC0G {
+    width: 55px;
+    height: 55px;
+}
+
+.theme-dark .panel-ufc1-o {
+    background: none;
+}
+.activityPanel-9icbyU {
+    border-bottom: none;
+}
+
 /* Main Color */
 .main-color{color: #2AB;}
 
