--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 5.1.2
+ * @version 5.1
  */
 
 /* Main Background */
@@ -1826,7 +1826,7 @@ background-color: transparent  !important;
     background-color: rgba(204, 102, 119, .7);
 }
 
-.membersGroup-2YoqY-, .container-1oeRFJ, .button-12Fmur {
+.membersGroup-2YoqY-, .container-1oeRFJ, button.button-12Fmur {
     color: white;
 }
 
@@ -2813,7 +2813,7 @@ background-color: transparent  !important;
     background-image: -webkit-radial-gradient(50% 53%, ellipse cover, #292929 15%, #000000 71%);
 }
 
-.button-12Fmur.enabled-9OeuTA:hover {
+button.button-12Fmur.enabled-9OeuTA:hover {
     color: white;
     background-color: #F44;
 }
