--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -18,7 +18,7 @@
 .layers-OrUESM,
 .standardSidebarView-E9Pc3j,
 .contentRegionScroller-2_GT_N {
-    background-color: transparent;
+    background-color: transparent ;
 }
 
 .sidebarRegion-1VBisG {
@@ -2514,11 +2514,11 @@
     border-radius: 4px;
 }
 
-.button-12Fmur {
+button.button-12Fmur {
     color: #e2e2e2;
 }
 
-.button-12Fmur.enabled-9OeuTA:hover {
+button.button-12Fmur.enabled-9OeuTA:hover {
     color: white;
     background-color: #4B5569;
 }
