--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 5.1.2
+ * @version 5.1
  */
 
  #app-mount .app-2CXKsg {
@@ -1026,7 +1026,7 @@
   background: rgba(155, 39, 66, .4);
 }
 
-.cozy-VmLDNB .timestamp-p1Df1m, .cozy-VmLDNB .timestamp-p1Df1m.alt-1dvXnH, .button-12Fmur, .button-3bklZh {
+.cozy-VmLDNB .timestamp-p1Df1m, .cozy-VmLDNB .timestamp-p1Df1m.alt-1dvXnH, button.button-12Fmur, .button-3bklZh {
   color: white;
 }
 
@@ -1070,7 +1070,7 @@
   background: none;
 }
 
-.button-12Fmur.enabled-9OeuTA:hover {
+button.button-12Fmur.enabled-9OeuTA:hover {
   color: white;
   background-color: rgba(155, 39, 66, .4);
 }
