--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -17,7 +17,7 @@
 .layers-OrUESM,
 .contentRegionScroller-2_GT_N,
 .standardSidebarView-E9Pc3j {
-    background-color: transparent;
+    background-color: transparent ;
 }
 
 #app-mount .layer-86YKbF {
@@ -1438,14 +1438,14 @@
     background-color: rgba(0, 0, 0, .2);
 }
 
-.button-12Fmur {
+button.button-12Fmur {
     border-radius: 7px;
     background-color: transparent;
     border: 1px solid transparent;
     color: white;
 }
 
-.button-12Fmur.enabled-9OeuTA:hover {
+button.button-12Fmur.enabled-9OeuTA:hover {
     color: white;
     background-color: transparent;
     border: 1px solid #f3acc5;
