--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -22,7 +22,7 @@
 .bg-1QIAus,
 .layers-OrUESM,
 .contentRegionScroller-2_GT_N {
-    background-color: transparent;
+    background-color: transparent ;
 }
 
 #app-mount .layer-86YKbF {
@@ -1407,14 +1407,14 @@
     background-color: rgba(0, 0, 0, .2);
 }
 
-.button-12Fmur {
+button.button-12Fmur {
     border-radius: 7px;
     background-color: transparent;
     border: 1px solid transparent;
     color: white;
 }
 
-.button-12Fmur.enabled-9OeuTA:hover {
+button.button-12Fmur.enabled-9OeuTA:hover {
     color: white;
     background-color: transparent;
     border: 1px solid #6cb4fe;
