--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 2.4
+ * @version 2.5
 */
 
 .app-2CXKsg, 
@@ -2811,12 +2811,12 @@
     font-weight: 600;
 }
 
-.button-12Fmur {
+button.button-12Fmur {
     border-radius: 30px;
     color: #F1F1F1;
 }
 
-.button-12Fmur.enabled-9OeuTA:hover {
+button.button-12Fmur.enabled-9OeuTA:hover {
     color: white;
     background-color: #FF0000;
 }
