--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 5.1.2
+ * @version 5.1
  */
 
  .app-2CXKsg {
@@ -1885,11 +1885,11 @@
     border-radius: 3px;
 }
 
-.button-12Fmur {
+button.button-12Fmur {
     color: white !important;
 }
 
-.button-12Fmur.enabled-9OeuTA:hover {
+button.button-12Fmur.enabled-9OeuTA:hover {
     background-color: rgba(118, 171, 217, .54);
     border: 2px outset #76AAD9;
 }
