Doublechecking Themes Completed
Hopefully it detects all of the BD themes

--- a/My_Theme_Collection/BubbleThemev3.theme.css
+++ b/My_Theme_Collection/BubbleThemev3.theme.css
@@ -11,17 +11,17 @@
     background-image: url(https://images.alphacoders.com/263/263303.jpg);
 }
 
-.small__05f7b:not(.root-8LYsGj).root_a28985 {
+.small__05f7b:not(.root_ba16f0).root_a28985 {
     height: 450px;
     width: 500px;
     padding: 70px 44px ;
 }
 
-.small__05f7b:not(.root-8LYsGj).root_a28985 .header-1ffhsl {
+.small__05f7b:not(.root_ba16f0).root_a28985 .header-1ffhsl {
     transform: translateX(34px);
 }
 
-.small__05f7b:not(.root-8LYsGj).root_a28985 .footer__89240 .button-ejjZWC {
+.small__05f7b:not(.root_ba16f0).root_a28985 .footer__89240 .button-ejjZWC {
     transform: translateX(-44px);
 }
 
@@ -1472,7 +1472,7 @@
     background-color: transparent;
 }
 
-.userPopoutOuter-1OHwPL {
+.userProfileOuter__46bb7 {
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.83), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.83);
 }
 
@@ -1480,7 +1480,7 @@
     border: 1px solid transparent;
 }
 
-.userProfileOuter-1K_BYU {
+.userProfileOuter__46bb7 {
     border-radius: 50px;
 }
 
@@ -1495,8 +1495,8 @@
     background-color: transparent;
 }
 
-.userProfileOuterThemed-2BgJCM.userPopoutOuter-1OHwPL,
-.userProfileOuterThemed-2BgJCM.userProfileOuter-1K_BYU {
+.userProfileOuterThemed-2BgJCM.userProfileOuter__46bb7,
+.userProfileOuterThemed-2BgJCM.userProfileOuter__46bb7 {
     background: none;
 }
 
