Small Theme Fix
Some themes showed no server icons and is now fixed

--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -1956,8 +1956,8 @@
     background-color: #61a5d8;
 }
 
-.svg__34dd4>mask {
-    display: none;
+.svg__34dd4 foreignObject {
+    mask: none;
 }
 
 .item_f9d377[style*="height: 40px"] {
