--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -1242,9 +1242,10 @@
     color: white !important;
 }
 
-.wrapper__8436d>.svg__34dd4 mask {
-    display: none;
+.wrapper__8436d > .svg__34dd4 foreignObject {
+  mask: none;
 }
+
 
 .wrapper__8436d,
 .icon__11cf1 {
