--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2596,9 +2596,10 @@ button.button_ae40a4.enabled__214db:hover {
   background: none;
 }
 
-.svg__34dd4>mask {
-  display: none;
+.svg__34dd4 foreignObject {
+  mask: none;
 }
+
 
 .icon__11cf1,
 .folder__17546,
