Just some small changes

--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2,7 +2,7 @@
  * @name Team Ram
  * @author ShadowDevilsAvenged
  * @description Team Ram is back once again(big request to bring this back)
- * @version 3.1
+ * @version 3.2
 */
 
 /* Ram Main Picture */
@@ -4225,4 +4225,8 @@ button.button_ae40a4.enabled__214db:hover {
 
 .theme-dark .activityUserPopoutV2__89098 .headerText_c0138d {
     color: white;
+}
+
+.container__3673d {
+    background: none;
 }
