--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -2,7 +2,7 @@
  * @name Team Rem
  * @author ShadowDevilsAvenged
  * @description Team Rem is back once again(big request to bring this back)
- * @version 3.1
+ * @version 3.2
 */
 
 /* Rem Main Picture */
@@ -4195,4 +4195,8 @@ button.button_ae40a4.enabled__214db:hover {
 
 .theme-dark .activityUserPopoutV2__89098 .headerText_c0138d {
     color: white;
+}
+
+.container__3673d {
+  background: none;
 }
